--- a/audio_process.ipynb
+++ b/audio_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        " 'data\\\\video\\\\Sukidakara (Yuika) [-Iz-dnVCfto].mp4']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,14 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\minhn\\AppData\\Local\\Temp\\ipykernel_14648\\1368872385.py:44: UserWarning: PySoundFile failed. Trying audioread instead.\n",
+      "C:\\Users\\minhn\\AppData\\Local\\Temp\\ipykernel_5544\\1368872385.py:44: UserWarning: PySoundFile failed. Trying audioread instead.\n",
       "  y, sr = librosa.load(video_path, sr=16000, duration=10)  # Load first 10 seconds\n",
       "d:\\code\\capstone\\misc\\RecommenderSystem\\.venv\\lib\\site-packages\\librosa\\core\\audio.py:184: FutureWarning: librosa.core.audio.__audioread_load\n",
       "\tDeprecated as of librosa version 0.10.0.\n",
@@ -192,7 +192,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\minhn\\AppData\\Local\\Temp\\ipykernel_14648\\1368872385.py:44: UserWarning: PySoundFile failed. Trying audioread instead.\n",
+      "C:\\Users\\minhn\\AppData\\Local\\Temp\\ipykernel_5544\\1368872385.py:44: UserWarning: PySoundFile failed. Trying audioread instead.\n",
       "  y, sr = librosa.load(video_path, sr=16000, duration=10)  # Load first 10 seconds\n",
       "d:\\code\\capstone\\misc\\RecommenderSystem\\.venv\\lib\\site-packages\\librosa\\core\\audio.py:184: FutureWarning: librosa.core.audio.__audioread_load\n",
       "\tDeprecated as of librosa version 0.10.0.\n",
@@ -219,9 +219,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🆔 ID: 62401\n",
+      "📌 Title: Sukidakara (Yuika) [-Iz-dnVCfto].mp4\n",
+      "🖼️ Title Vector (First 5): [-0.07499942, 0.03263671, -0.042732365, -0.08395473, 0.016908957]...\n",
+      "📹 Video Vector (First 5): [0.014596695, 0.015319879, -0.0145066, 0.0068330355, 0.028749267]...\n",
+      "🎵 Audio Vector (First 5): [-0.96456, 0.21708448, 0.016817512, 0.08304698, 0.009641521]...\n",
+      "============================================================\n",
+      "🆔 ID: 175417\n",
+      "📌 Title: Don't Stop Me Now (Queen) - Sungha Jung [pqQf1uD5m90].mp4\n",
+      "🖼️ Title Vector (First 5): [-0.0067511243, -0.0044751368, 0.021656744, -0.0799907, 0.12465984]...\n",
+      "📹 Video Vector (First 5): [0.017497018, 0.01780323, 0.0065654377, 0.012469152, 0.033730667]...\n",
+      "🎵 Audio Vector (First 5): [-0.9582322, 0.26381576, 0.013033486, 0.061974417, 0.0034579327]...\n",
+      "============================================================\n",
+      "🆔 ID: 237669\n",
+      "📌 Title: As It Was (Harry Styles) - NELL X Sungha Jung [O9-CQndjtEQ].mp4\n",
+      "🖼️ Title Vector (First 5): [-0.0675062, 0.09082677, -0.055744987, -0.036358066, -0.012560165]...\n",
+      "📹 Video Vector (First 5): [-0.014364097, 0.012391116, -0.022775052, 0.014093298, 0.026422227]...\n",
+      "🎵 Audio Vector (First 5): [-0.9121875, 0.33052072, 0.019061027, 0.05094812, -0.0029147752]...\n",
+      "============================================================\n",
+      "🆔 ID: 258010\n",
+      "📌 Title: As It Was (Harry Styles) - NELL X Sungha Jung [O9-CQndjtEQ].mp4\n",
+      "🖼️ Title Vector (First 5): [-0.0675062, 0.09082677, -0.055744987, -0.036358066, -0.012560165]...\n",
+      "📹 Video Vector (First 5): [-0.014364097, 0.012391116, -0.022775052, 0.014093298, 0.026422227]...\n",
+      "🎵 Audio Vector (First 5): [-0.9121875, 0.33052072, 0.019061027, 0.05094812, -0.0029147752]...\n",
+      "============================================================\n",
+      "🆔 ID: 370826\n",
+      "📌 Title: Don't Stop Me Now (Queen) - Sungha Jung [pqQf1uD5m90].mp4\n",
+      "🖼️ Title Vector (First 5): [-0.0067511243, -0.0044751368, 0.021656744, -0.0799907, 0.12465984]...\n",
+      "📹 Video Vector (First 5): [0.017497018, 0.01780323, 0.0065654377, 0.012469152, 0.033730667]...\n",
+      "🎵 Audio Vector (First 5): [-0.9582322, 0.26381576, 0.013033486, 0.061974417, 0.0034579327]...\n",
+      "============================================================\n",
+      "🆔 ID: 421198\n",
+      "📌 Title: Flaming (With Kotaro Oshio) - Sungha Jung (Official Music Video) [tJIkyeTqExE].mp4\n",
+      "🖼️ Title Vector (First 5): [-0.019551063, 0.06014902, -0.03883617, -0.06748948, 0.06970756]...\n",
+      "📹 Video Vector (First 5): [0.010793081, 0.01675374, -0.00691382, 0.014678269, 0.018840251]...\n",
+      "🎵 Audio Vector (First 5): [-0.9316531, 0.32956094, 0.070390284, 0.049556885, 0.025737915]...\n",
+      "============================================================\n",
+      "🆔 ID: 440814\n",
+      "📌 Title: Flaming (With Kotaro Oshio) - Sungha Jung (Official Music Video) [tJIkyeTqExE].mp4\n",
+      "🖼️ Title Vector (First 5): [-0.019551063, 0.06014902, -0.03883617, -0.06748948, 0.06970756]...\n",
+      "📹 Video Vector (First 5): [0.010793081, 0.01675374, -0.00691382, 0.014678269, 0.018840251]...\n",
+      "🎵 Audio Vector (First 5): [-0.9316531, 0.32956094, 0.070390284, 0.049556885, 0.025737915]...\n",
+      "============================================================\n",
+      "🆔 ID: 481888\n",
+      "📌 Title: Sukidakara (Yuika) [-Iz-dnVCfto].mp4\n",
+      "🖼️ Title Vector (First 5): [-0.07499942, 0.03263671, -0.042732365, -0.08395473, 0.016908957]...\n",
+      "📹 Video Vector (First 5): [0.014596695, 0.015319879, -0.0145066, 0.0068330355, 0.028749267]...\n",
+      "🎵 Audio Vector (First 5): [-0.96456, 0.21708448, 0.016817512, 0.08304698, 0.009641521]...\n",
+      "============================================================\n",
+      "🆔 ID: 646674\n",
+      "📌 Title: Seventh #9 - Sungha Jung [i3-mzP_KYVc].mp4\n",
+      "🖼️ Title Vector (First 5): [-0.079455204, 0.025906736, -0.023195883, -0.05580442, 0.08113979]...\n",
+      "📹 Video Vector (First 5): [0.007324681, 0.009497449, 0.0011458695, 0.0033198842, 0.033155907]...\n",
+      "🎵 Audio Vector (First 5): [-0.9944945, 0.09520254, -0.0028552478, 0.017257944, 0.008354881]...\n",
+      "============================================================\n",
+      "🆔 ID: 750997\n",
+      "📌 Title: Classical Gas🔥 [cx6Nva2yUjk].mp4\n",
+      "🖼️ Title Vector (First 5): [-0.0013843529, 0.022035357, 0.011836802, -0.10224911, -0.07181264]...\n",
+      "📹 Video Vector (First 5): [0.02521497, 0.013258349, 0.014775943, 0.022830684, 0.011308478]...\n",
+      "🎵 Audio Vector (First 5): [-0.84314704, 0.4615416, 0.030894287, 0.16137888, 0.042108748]...\n",
+      "============================================================\n",
+      "🆔 ID: 888354\n",
+      "📌 Title: Seventh #9 - Sungha Jung [i3-mzP_KYVc].mp4\n",
+      "🖼️ Title Vector (First 5): [-0.079455204, 0.025906736, -0.023195883, -0.05580442, 0.08113979]...\n",
+      "📹 Video Vector (First 5): [0.007324681, 0.009497449, 0.0011458695, 0.0033198842, 0.033155907]...\n",
+      "🎵 Audio Vector (First 5): [-0.9944945, 0.09520254, -0.0028552478, 0.017257944, 0.008354881]...\n",
+      "============================================================\n",
+      "🆔 ID: 934047\n",
+      "📌 Title: Classical Gas🔥 [cx6Nva2yUjk].mp4\n",
+      "🖼️ Title Vector (First 5): [-0.0013843529, 0.022035357, 0.011836802, -0.10224911, -0.07181264]...\n",
+      "📹 Video Vector (First 5): [0.02521497, 0.013258349, 0.014775943, 0.022830684, 0.011308478]...\n",
+      "🎵 Audio Vector (First 5): [-0.84314704, 0.4615416, 0.030894287, 0.16137888, 0.042108748]...\n",
+      "============================================================\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def fetch_all_vectors():\n",
@@ -246,35 +325,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🎯 Searching for videos similar to Video ID 963694\n",
-      "\n",
-      "🆔 Video ID: 760266\n",
-      "🔍 Similarity Score: 0.9537\n",
-      "📌 Title: Sukidakara (Yuika) [-Iz-dnVCfto].mp4\n",
-      "--------------------------------------------------\n",
-      "🆔 Video ID: 171697\n",
-      "🔍 Similarity Score: 0.9514\n",
-      "📌 Title: Seventh #9 - Sungha Jung [i3-mzP_KYVc].mp4\n",
-      "--------------------------------------------------\n",
-      "🆔 Video ID: 284614\n",
-      "🔍 Similarity Score: 0.9383\n",
-      "📌 Title: Don't Stop Me Now (Queen) - Sungha Jung [pqQf1uD5m90].mp4\n",
-      "--------------------------------------------------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\minhn\\AppData\\Local\\Temp\\ipykernel_18072\\3808235069.py:11: DeprecationWarning: `search` method is deprecated and will be removed in the future. Use `query_points` instead.\n",
-      "  search_results = qdrant.search(\n"
+     "ename": "NameError",
+     "evalue": "name 'qdrant' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 28\u001b[0m\n\u001b[0;32m     24\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m📌 Title: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresult\u001b[38;5;241m.\u001b[39mpayload\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtitle\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;250m \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNo Title\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     25\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m50\u001b[39m)\n\u001b[1;32m---> 28\u001b[0m \u001b[43mfind_similar_videos\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvideo_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m963694\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtop_k\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Replace with a real video ID\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m, in \u001b[0;36mfind_similar_videos\u001b[1;34m(video_id, top_k)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mfind_similar_videos\u001b[39m(video_id, top_k\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;66;03m# Fetch the selected video's vector\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[43mqdrant\u001b[49m\u001b[38;5;241m.\u001b[39mretrieve(collection_name, [video_id], with_vectors\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m response:\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m⚠️ Video not found in the collection!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'qdrant' is not defined"
      ]
     }
    ],
@@ -307,6 +370,26 @@
     "\n",
     "\n",
     "find_similar_videos(video_id=963694, top_k=3)  # Replace with a real video ID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Record(id=62401, payload={'title': 'Sukidakara (Yuika) [-Iz-dnVCfto].mp4'}, vector=None, shard_key=None, order_value=None)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qdrant.retrieve(collection_name, [62401])"
    ]
   }
  ],
